[package]
name = "revmplayground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
tokio = { version = "1.28.0", features = ["full"] }
ethers = "2.0.7"
ethers-signers = { version = "2.0.8", features = ["ledger"] }
revm = { version = "3.5.0", features = ["ethersdb"] }
